# jukebox

./: .gitignore  Cargo.toml  Wunschliste.md  Zu spaet.md  _dot_env  portless.json  roadmap.md
chord_down/: Cargo.toml  README.md
chord_down/src/: lib.rs
jukebox_cli/: Cargo.toml
jukebox_cli/src/cli/: create_default_gig.rs  import_songs_from_directory.rs  insert_song.rs  parse_song.rs  print_admin_url.rs  run_pending_migrations.rs  show_songs.rs  update_all_tags_from_tsv.rs
jukebox_db/: Cargo.toml
jukebox_db/migrations/2026-03-16-145315-0000_create_songs/: down.sql  up.sql
jukebox_db/migrations/2026-03-16-150417-0000_create_gigs/: down.sql  up.sql
jukebox_db/migrations/2026-03-16-150417-0000_create_setlists/: down.sql  up.sql
jukebox_db/migrations/2026-03-16-150954-0000_songs_in_gigs/: down.sql  up.sql
jukebox_db/migrations/2026-03-16-150954-0000_songs_in_setlist/: up.sql
jukebox_db/migrations/2026-03-29-195509-0000_create_tags_and_tags_on_songs/: down.sql  up.sql
jukebox_db/src/: lib.rs  models.rs  schema.rs
jukebox_db/src/cli/: import_songs_from_directory.rs  insert_song.rs  show_songs.rs
jukebox_db/src/queries/: gigs.rs  mod.rs  songs.rs  tags.rs
jukebox_server/: Cargo.toml  roadmap.md
jukebox_server/src/: filters.rs  main.rs  templates.rs  types.rs
jukebox_server/src/services/: admin.rs  gigs.rs  mod.rs  no_shoes_no_shirt.rs  qrcode.rs  session.rs  song.rs  song_list.rs  songs.rs  static_files.rs  welcome.rs
jukebox_server/src/templates/: mod.rs
jukebox_server/static/: jukebox.css  jukebox.js  manifest.json
jukebox_server/templates/: _footer.single_song.html  _footer.song_list.html  _overlay.html  base.html  bottom_toolbar.html  category_wof.html  core.html  no_shoes_no_shirt.html  qrcode.html  song.html  songs_index.html  tailwind_input.css  welcome.html
jukebox_server/templates/overlays/: _admin_panel.html  _slotmachine.html  admin_panel.css  module.css  module.html  slotmachine.css
jukebox_server/templates/single_song/: _footer.html  module.css  module.html
jukebox_server/templates/song_list/: _footer.html  module.css  module.html
jukebox_server/templates/zoom/: form.html  module.css
songs/: 50 Ways to Leave Your Lover.md  Aber bitte mit Sahne.md  Abracadabra.md  Action.md  All along the Watchtower.md  All you need is Love.md  Alle Dumm (gut).md  Alle Dumm.md  Alles nur geklaut.md  Always look on the bright side of live.md  Am Fluss.md  Another one bites the dust.md  Aurelie.md  Beds are burning.md  Behind blue eyes.md  Besuchen Sie Europa (solange es noch steht).md  Besuchen Sie Europa.md  Black Night.md  Blaue Augen.md  Blueprint.md  Born to Be Wild.md  Buzzword Bingo.md  Change the World.md  Comfortably Numb.md  Count to Ten.md  Crazy little things called Love.md  Dancing Queen.md  Dat Wasser vun Koelle.md  Dat Wasser vun Kölle.md  Der Nippel durch die Lasche.md  Die Karawane zieht weiter.md  Dirty old Town.md  Don't look back in anger.md  Down There.md  Down under.md  Du willst mich kuessen.md  Easy.md  Eigentlich.md  Ein Riss.md  Fields of Gold.md  (+92 more)
