[package]
name = "jukebox_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "show_songs"
path = "src/cli/show_songs.rs"

[[bin]]
name = "import_songs_from_directory"
path = "src/cli/import_songs_from_directory.rs"

[[bin]]
name = "parse_song"
path = "src/cli/parse_song.rs"

[[bin]]
name = "create_default_gig"
path = "src/cli/create_default_gig.rs"

[[bin]]
name = "run_pending_migrations"
path = "src/cli/run_pending_migrations.rs"

[dependencies]
jukebox_db = { path = "../jukebox_db" }
regex = "1.12.3"
chord_down = { path = "../chord_down" }
chrono = "0.4.44"
dotenvy = "0.15.7"
