[package]
name = "jukebox_db"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "show_songs"
path = "src/cli/show_songs.rs"

[[bin]]
name = "insert_song"
path = "src/cli/insert_song.rs"

[[bin]]
name = "import_songs_from_directory"
path = "src/cli/import_songs_from_directory.rs"


[dependencies]
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenvy = "0.15.7"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
