[package]
name = "jukebox_db"
version = "0.1.0"
edition = "2024"


[dependencies]
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "serde_json", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
chord_down = { path = "../chord_down" }
ron = "0.12.0"
serde_json = "1.0.149"
chrono = "0.4.44"
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
log = "0.4.29"
