[package]
name = "jukebox_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
jukebox_db = { path = "../jukebox_db" }
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
r2d2 = "0.8.10"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
regex = "1.12.3"
