[package]
name = "jukebox_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
jukebox_db = { path = "../jukebox_db" }
chord_down = { path = "../chord_down" }
dotenvy = "0.15.7"
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
r2d2 = "0.8.10"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
regex = "1.12.3"
askama = { version = "0.15.4", features = ["serde_json"]}
ron = "0.12.0"
actix-files = "0.6.10"
env_logger = "0.11.9"
querystring = "1.1.0"
actix-session = { version = "0.11.0", features = ["cookie-session"]}
serde = "1.0.228"
log = "0.4.29"
serde_json = "1.0.149"
base64 = "0.22.1"
